--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ text-decoration: none;
 
 /* when hover, copy the styling of the heading */
 nav a:hover {
-  background-color: #E6F7ED; 
+  background-color: rgba(230, 247, 237, 0.6);
   border-radius: 40px;
   border: 1.5px solid #ff4b5c; 
    padding: 5px;
@@ -141,7 +141,8 @@ a:hover {
 .story-page blockquote {
   margin: 12px 0 16px 24px;
   padding: 12px 16px;
-  background: #FFF8F6;
+  background-color: rgba(230, 247, 237, 0.6);
+  /* background: #FFF8F6; */
   font-style: italic;
   border-radius: 8px;
 }
@@ -167,7 +168,18 @@ a:hover {
 
 
 
-/* GALLERY PAGE STYLING  */
+/* CHARACTER GALLERY PAGE STYLING  */
+
+.character-page main {
+  width: 62%; 
+  margin: 20px auto 48px;     /* center */
+  padding: 24px 28px;
+  background-color: rgba(230, 247, 237, 0.6);  
+  border: 2px solid rgba(255,111,97,0.6); 
+  border-radius: 14px;
+ line-height: 1.6;
+ box-shadow: 0 4px 12px rgba(255,75,92,0.15);      /* NEW PROPERTY: box shadow */
+}
 
 /*  layout for the images... 3 columns */
 .gallery {
