--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ p a:hover {
 /*  styling for each of the cards  */
 .story-card {
   background: #FFFFFF;
-  border: 2px solid rgba(255,111,97,0.6);  
+  border: 2px solid rgba(255,111,97,0.6);;  
   border-radius: 14px;
   padding: 24px 28px;
   box-shadow: 0 4px 12px rgba(255, 75, 92, 0.12);
