--- a/style.css
+++ b/style.css
@@ -39,10 +39,21 @@ h1 {
   padding: 20px;                
   margin: 20px auto;    
   /* margin: 0 auto 20px;     */
-  width: 55%; 
+  width: 45%; 
   /* width: 62%;  */
   border-radius: 15px;   
 }
+
+
+/* adding a hover effect for the title */
+h1:hover {
+   color: #ff4b5c;           /* coral text */
+  background-color: #FFFFFF; /* white background */
+  box-shadow: 0 0 12px rgba(42,157,143,0.4); /* teal glow */
+  transform: scale(1.1);    /* zooms in slightly */
+}
+
+
 
 @media (max-width: 600px){
   h1 {
@@ -56,14 +67,15 @@ h1 {
 /* styling for the subheadings */
 h2{
     color: #2A9D8F;
-  
 }
+
+
 
 
 
 /* body styling */
 main{
-  width: 60%; 
+  width: 50%; 
   margin: 20px auto 48px;     /* center */
   padding: 24px 28px;
   background: #FFFFFF;      
@@ -316,6 +328,10 @@ p a:hover {
   margin: 4px 0;
 }
 
+.setting-page .habitat.selected {
+  border: 2px dashed #2A9D8F; /* green dashed when u click on the habitat card */
+}
+
 /* for mobile, just 1 column grid  */
 @media (max-width: 820px) {
   .setting-page main {
@@ -380,7 +396,7 @@ p a:hover {
 /* CHARACTER GALLERY PAGE STYLING  */
 
 .character-page main {
-  width: 62%; 
+  width: 55%; 
   margin: 20px auto 48px;     /* center */
   padding: 24px 28px;
   /* background-color: rgba(230, 247, 237, 0.6);   */
@@ -492,6 +508,6 @@ p a:hover {
 
 
 .faded {
-  color: #aaa;   /* greyed out */
+  color: #aaa;   /* greyed out text as you scroll/read on the story page */
   transition: color 0.5s ease;
 }
